# traffichelper

./: .gitignore  README.md  about.html  admin.html  contact.html  default.nix  flake.nix  guidebook.html  home.html  login_admin.html  package-lock.json  package.json  queries.html  results.html  routing.html
backend_and_api/: .openapi-generator-ignore  README.md  openapi.yaml  plugins  setup.cfg
backend_and_api/Contracts/: descriptions  preferences.yaml  website.yaml
backend_and_api/Documentation/: details
backend_and_api/src/backend/: README.md  Workings  __main__.py  garbage.py  requirements.txt
backend_and_api/src/backend/API/: Website Mapping  Workings  preferences.yaml  website.yaml
backend_and_api/src/backend/About/: Commands  Notes
backend_and_api/src/backend/Code/: Workings  loader.py  mutation.py  user.py  wrappers.py
backend_and_api/src/backend/Constants/: Workings  constants.py  filenames.py
backend_and_api/src/backend/Data/: Accident_Policy  Structure_Policy  network.graphml  network_backup.graphml
backend_and_api/src/backend/Redundant/: main_tmp.py  play.py  statistic.py
backend_and_api/src/backend/Test/: practice.py  rough.py  test.py
backend_and_api/src/backend/User/: Workings  cli.py  main.py
backend_and_api/src/backend/Writerside/: f.tree  writerside.cfg
backend_and_api/src/openapi_server/: main.py  security_api.py
backend_and_api/src/openapi_server/apis/: points_api.py  points_api_base.py  preferences_api.py  preferences_api_base.py  (+2 more)
backend_and_api/tests/: conftest.py  test_points_api.py  test_preferences_api.py
(+335 files in other folders)
