[metadata]
name = openapi_server
version = 1.0
description = This is the API for traffic wise based on OpenAPI 3.0 specification..
long_description = file: README.md
keywords = OpenAPI Traffic Wise
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
